# mutils

./: .gitignore  Cargo.toml  README.md
src/: colour.rs  internal.rs  lib.rs  line.rs  line_iterator.rs  num_tuple.rs  number_extensions.rs  point.rs  random.rs  rect.rs  rgba.rs  size.rs  transform.rs  vec2d.rs
src/colour/: colour_parse_error.rs
src/geom/: circle.rs  line.rs  mod.rs  point.rs  rect.rs  size.rs  testing_utils.rs  transform.rs
src/geom/circle/: circle_circumference_iterator.rs  circle_circumference_lines_iterator.rs  circle_circumference_points_iterator.rs
src/geom/curves/: b_curve.rs  curve_lines_iterator.rs  mod.rs  qubic_b_curve.rs
src/geom/line/: line_iterator.rs
src/geom/position/: horizontal_position.rs  line_position.rs  mod.rs  point_position.rs  vertical_position.rs
src/geom/rect/: rect_iterator.rs
src/geom/size/: size_iterator.rs
src/internal/: from_clamped.rs  half.rs  num_trampolene.rs
src/internal/macros/: mod.rs  quick_n_div.rs  quick_n_mul.rs
src/num/: from_clamped.rs  from_rounded.rs  half.rs  mod.rs  num.rs  num_identity.rs  num_trampolene.rs  num_tuple.rs  number_extensions.rs  to_rounded.rs  to_signed_clamped.rs
