[package]
name = "mutils"
version = "4.2.1"
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Mathematical-like utilities. Points, Sizes, Colours, maths operating on them. Things like that."
repository = "https://github.com/JosephLenton/mutils"

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.0", default-features=false, features = ["small_rng"] }

[dependencies.num-traits]
version = "0.2.11"
default-features = false

[dev-dependencies]
assert_approx_eq = "1.1.0"
